# melotts.axcl

./: CMakeLists.txt  README.md  build.sh  build_aarch64.sh  cross_compile.sh  download_models.sh  main.cpp
cmake/: 3rdparty.cmake
src/: Lexicon.hpp
src/utilities/: scalar_guard.hpp
